Fix lint warning, add gradle memory config