@@ -232,7 +232,7 @@ public class This implements java.io.Serializable, Runnable
 
 		// a default hashCode()
 		if ( methodName.equals("hashCode" ) )
-			return new Integer(this.hashCode());
+			return Integer.valueOf(this.hashCode());
 
 		// a default equals() testing for equality with the This reference
 		if ( methodName.equals("equals" ) ) {
